# plasma-containmentactions-customdesktopmenu

./: .gitignore  README.md  build_and_test.sh  makerelease.sh  test_production_ready.sh
src/: CMakeLists.txt  Messages.sh  build.sh  config.ui  customdesktopmenu.cpp  customdesktopmenu.h  plasma-containmentactions-customdesktopmenu.json
